Fixed color scheme preference on safari

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,12 @@
   line-height:1.5;
   font-weight: 400;
   font-size: 15px;
-  color: var(--color-text-dm);
+  font-synthesis: none;
+  color-scheme: dark;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: var(--color-text);
   background-color: var(--color-bg-dm);
 
   --content-width: 1600px;
@@ -38,20 +43,7 @@
   --color-accent-dm: #e66c47;
   // --color-accent-lm:#b83e19;
 
-  //#BD7B7A
-  //#dddbff
 
-  /*
-  //README try this out for toggle theme
-  body{
-    //define colors
-  }
-
-  body.light{
-    //define colors again with same name but for light now
-  }
-
-  */
 
 }
 
@@ -80,7 +72,6 @@ button{
 #main{
   display: flex;
   flex-direction: column;
-  // align-items: center;
   min-height: 100vh;
 
 }
@@ -90,19 +81,16 @@ a{
 }
 
 //Content MAIN
-.content-main{
-
-}
 
 //Content SIDE
 
 
-@media(prefers-color-scheme:light){
-  :root{
-    --color-text: #0b080c;
-    //define all the color schemes
-  }
-}
+// @media(prefers-color-scheme:light){
+//   :root{
+//     --color-text: #0b080c;
+//     //define all the color schemes
+//   }
+// }
 
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
